// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Avatar component tests Avatar badge 1`] = `
<View
  accessibilityLabel=", available"
  accessibilityRole="image"
  accessible={true}
  badgeStatus="available"
  icon={null}
  image={
    {
      "accessibilityLabel": "",
      "source": undefined,
    }
  }
  initials=""
  outOfOffice={false}
  shape="circular"
  style={
    {
      "alignItems": "center",
      "alignSelf": "flex-start",
      "aspectRatio": 1,
      "flexDirection": "row",
      "justifyContent": "center",
      "minHeight": 24,
      "minWidth": 24,
      "opacity": 1,
    }
  }
>
  <View
    accessible={false}
    style={
      {
        "alignItems": "center",
        "aspectRatio": 1,
        "backgroundColor": "#e6e6e6",
        "borderColor": "#d1d1d1",
        "borderRadius": 9999,
        "borderWidth": 0,
        "justifyContent": "center",
        "minHeight": 24,
        "minWidth": 24,
      }
    }
  >
    <RNSVGSvgView
      align="xMidYMid"
      bbHeight={16}
      bbWidth={16}
      color="#616161"
      focusable={false}
      height={16}
      meetOrSlice={0}
      minX={0}
      minY={0}
      style={
        [
          {
            "backgroundColor": "transparent",
            "borderWidth": 0,
          },
          {
            "flex": 0,
            "height": 16,
            "width": 16,
          },
        ]
      }
      vbHeight={20}
      vbWidth={20}
      width={16}
    >
      <RNSVGGroup
        fill={
          {
            "payload": 4278190080,
            "type": 0,
          }
        }
      >
        <RNSVGPath
          d="M10 2C7.79086 2 6 3.79086 6 6C6 8.20914 7.79086 10 10 10C12.2091 10 14 8.20914 14 6C14 3.79086 12.2091 2 10 2ZM7 6C7 4.34315 8.34315 3 10 3C11.6569 3 13 4.34315 13 6C13 7.65685 11.6569 9 10 9C8.34315 9 7 7.65685 7 6ZM5.00873 11C3.90315 11 3 11.8869 3 13C3 14.6912 3.83281 15.9663 5.13499 16.7966C6.41697 17.614 8.14526 18 10 18C11.8547 18 13.583 17.614 14.865 16.7966C16.1672 15.9663 17 14.6912 17 13C17 11.8956 16.1045 11 15 11L5.00873 11ZM4 13C4 12.4467 4.44786 12 5.00873 12L15 12C15.5522 12 16 12.4478 16 13C16 14.3088 15.3777 15.2837 14.3274 15.9534C13.2568 16.636 11.7351 17 10 17C8.26489 17 6.74318 16.636 5.67262 15.9534C4.62226 15.2837 4 14.3088 4 13Z"
          fill={
            {
              "type": 2,
            }
          }
          propList={
            [
              "fill",
            ]
          }
        />
      </RNSVGGroup>
    </RNSVGSvgView>
  </View>
  <View
    accessible={true}
    iconPosition="before"
    position="absolute"
    style={
      {
        "alignItems": "center",
        "alignSelf": "flex-start",
        "aspectRatio": 1,
        "backgroundColor": "#ffffff",
        "borderColor": "#ffffff",
        "borderRadius": 9999,
        "borderWidth": 1,
        "bottom": -1,
        "flexDirection": "row",
        "height": 8,
        "justifyContent": "center",
        "paddingHorizontal": 0,
        "position": "absolute",
        "right": -1,
        "width": 8,
      }
    }
  >
    <RNSVGSvgView
      align="xMidYMid"
      bbHeight={6}
      bbWidth={6}
      fill="none"
      focusable={false}
      meetOrSlice={0}
      minX={0}
      minY={0}
      style={
        [
          {
            "backgroundColor": "transparent",
            "borderWidth": 0,
          },
          {
            "aspectRatio": 1,
            "color": "#13a10e",
            "height": 6,
            "width": 6,
          },
          {
            "flex": 0,
            "height": 6,
            "width": 6,
          },
        ]
      }
      vbHeight={16}
      vbWidth={16}
    >
      <RNSVGGroup
        color="#13a10e"
        fill={null}
        propList={
          [
            "fill",
          ]
        }
      >
        <RNSVGPath
          d="M8 16A8 8 0 108 0a8 8 0 000 16zm3.7-9.3l-4 4a1 1 0 01-1.41 0l-2-2a1 1 0 111.42-1.4L7 8.58l3.3-3.3a1 1 0 011.4 1.42z"
          fill={
            {
              "type": 2,
            }
          }
          propList={
            [
              "fill",
            ]
          }
        />
      </RNSVGGroup>
    </RNSVGSvgView>
  </View>
</View>
`;

exports[`Avatar component tests Avatar circular 1`] = `
<View
  accessibilityLabel=""
  accessibilityRole="image"
  accessible={true}
  icon={null}
  image={
    {
      "accessibilityLabel": "",
      "source": undefined,
    }
  }
  initials=""
  shape="circular"
  style={
    {
      "alignItems": "center",
      "alignSelf": "flex-start",
      "aspectRatio": 1,
      "flexDirection": "row",
      "justifyContent": "center",
      "minHeight": 24,
      "minWidth": 24,
      "opacity": 1,
    }
  }
>
  <View
    accessible={false}
    style={
      {
        "alignItems": "center",
        "aspectRatio": 1,
        "backgroundColor": "#e6e6e6",
        "borderColor": "#d1d1d1",
        "borderRadius": 9999,
        "borderWidth": 0,
        "justifyContent": "center",
        "minHeight": 24,
        "minWidth": 24,
      }
    }
  >
    <RNSVGSvgView
      align="xMidYMid"
      bbHeight={16}
      bbWidth={16}
      color="#616161"
      focusable={false}
      height={16}
      meetOrSlice={0}
      minX={0}
      minY={0}
      style={
        [
          {
            "backgroundColor": "transparent",
            "borderWidth": 0,
          },
          {
            "flex": 0,
            "height": 16,
            "width": 16,
          },
        ]
      }
      vbHeight={20}
      vbWidth={20}
      width={16}
    >
      <RNSVGGroup
        fill={
          {
            "payload": 4278190080,
            "type": 0,
          }
        }
      >
        <RNSVGPath
          d="M10 2C7.79086 2 6 3.79086 6 6C6 8.20914 7.79086 10 10 10C12.2091 10 14 8.20914 14 6C14 3.79086 12.2091 2 10 2ZM7 6C7 4.34315 8.34315 3 10 3C11.6569 3 13 4.34315 13 6C13 7.65685 11.6569 9 10 9C8.34315 9 7 7.65685 7 6ZM5.00873 11C3.90315 11 3 11.8869 3 13C3 14.6912 3.83281 15.9663 5.13499 16.7966C6.41697 17.614 8.14526 18 10 18C11.8547 18 13.583 17.614 14.865 16.7966C16.1672 15.9663 17 14.6912 17 13C17 11.8956 16.1045 11 15 11L5.00873 11ZM4 13C4 12.4467 4.44786 12 5.00873 12L15 12C15.5522 12 16 12.4478 16 13C16 14.3088 15.3777 15.2837 14.3274 15.9534C13.2568 16.636 11.7351 17 10 17C8.26489 17 6.74318 16.636 5.67262 15.9534C4.62226 15.2837 4 14.3088 4 13Z"
          fill={
            {
              "type": 2,
            }
          }
          propList={
            [
              "fill",
            ]
          }
        />
      </RNSVGGroup>
    </RNSVGSvgView>
  </View>
</View>
`;

exports[`Avatar component tests Avatar default 1`] = `
<View
  accessibilityLabel=""
  accessibilityRole="image"
  accessible={true}
  icon={null}
  image={
    {
      "accessibilityLabel": "",
      "source": undefined,
    }
  }
  initials=""
  shape="circular"
  style={
    {
      "alignItems": "center",
      "alignSelf": "flex-start",
      "aspectRatio": 1,
      "flexDirection": "row",
      "justifyContent": "center",
      "minHeight": 24,
      "minWidth": 24,
      "opacity": 1,
    }
  }
>
  <View
    accessible={false}
    style={
      {
        "alignItems": "center",
        "aspectRatio": 1,
        "backgroundColor": "#e6e6e6",
        "borderColor": "#d1d1d1",
        "borderRadius": 9999,
        "borderWidth": 0,
        "justifyContent": "center",
        "minHeight": 24,
        "minWidth": 24,
      }
    }
  >
    <RNSVGSvgView
      align="xMidYMid"
      bbHeight={16}
      bbWidth={16}
      color="#616161"
      focusable={false}
      height={16}
      meetOrSlice={0}
      minX={0}
      minY={0}
      style={
        [
          {
            "backgroundColor": "transparent",
            "borderWidth": 0,
          },
          {
            "flex": 0,
            "height": 16,
            "width": 16,
          },
        ]
      }
      vbHeight={20}
      vbWidth={20}
      width={16}
    >
      <RNSVGGroup
        fill={
          {
            "payload": 4278190080,
            "type": 0,
          }
        }
      >
        <RNSVGPath
          d="M10 2C7.79086 2 6 3.79086 6 6C6 8.20914 7.79086 10 10 10C12.2091 10 14 8.20914 14 6C14 3.79086 12.2091 2 10 2ZM7 6C7 4.34315 8.34315 3 10 3C11.6569 3 13 4.34315 13 6C13 7.65685 11.6569 9 10 9C8.34315 9 7 7.65685 7 6ZM5.00873 11C3.90315 11 3 11.8869 3 13C3 14.6912 3.83281 15.9663 5.13499 16.7966C6.41697 17.614 8.14526 18 10 18C11.8547 18 13.583 17.614 14.865 16.7966C16.1672 15.9663 17 14.6912 17 13C17 11.8956 16.1045 11 15 11L5.00873 11ZM4 13C4 12.4467 4.44786 12 5.00873 12L15 12C15.5522 12 16 12.4478 16 13C16 14.3088 15.3777 15.2837 14.3274 15.9534C13.2568 16.636 11.7351 17 10 17C8.26489 17 6.74318 16.636 5.67262 15.9534C4.62226 15.2837 4 14.3088 4 13Z"
          fill={
            {
              "type": 2,
            }
          }
          propList={
            [
              "fill",
            ]
          }
        />
      </RNSVGGroup>
    </RNSVGSvgView>
  </View>
</View>
`;

exports[`Avatar component tests Avatar ring 1`] = `
<View
  accessibilityLabel=""
  accessibilityRole="image"
  accessible={true}
  active="active"
  activeAppearance="ring"
  icon={null}
  image={
    {
      "accessibilityLabel": "",
      "source": undefined,
    }
  }
  initials=""
  shape="circular"
  style={
    {
      "alignItems": "center",
      "alignSelf": "flex-start",
      "aspectRatio": 1,
      "flexDirection": "row",
      "justifyContent": "center",
      "minHeight": 32,
      "minWidth": 32,
      "opacity": 1,
    }
  }
>
  <View
    style={
      {
        "aspectRatio": 1,
        "backgroundColor": "transparent",
        "borderColor": "#00000000",
        "borderRadius": 9999,
        "borderStyle": "solid",
        "borderWidth": 2,
        "marginLeft": 2,
        "marginTop": 2,
        "minHeight": 32,
        "minWidth": 32,
      }
    }
  >
    <View
      accessible={false}
      style={
        {
          "alignItems": "center",
          "aspectRatio": 1,
          "backgroundColor": "#e6e6e6",
          "borderColor": "#d1d1d1",
          "borderRadius": 9999,
          "borderWidth": 0,
          "justifyContent": "center",
          "marginLeft": 2,
          "marginTop": 2,
          "minHeight": 24,
          "minWidth": 24,
        }
      }
    >
      <RNSVGSvgView
        align="xMidYMid"
        bbHeight={16}
        bbWidth={16}
        color="#616161"
        focusable={false}
        height={16}
        meetOrSlice={0}
        minX={0}
        minY={0}
        style={
          [
            {
              "backgroundColor": "transparent",
              "borderWidth": 0,
            },
            {
              "flex": 0,
              "height": 16,
              "width": 16,
            },
          ]
        }
        vbHeight={20}
        vbWidth={20}
        width={16}
      >
        <RNSVGGroup
          fill={
            {
              "payload": 4278190080,
              "type": 0,
            }
          }
        >
          <RNSVGPath
            d="M10 2C7.79086 2 6 3.79086 6 6C6 8.20914 7.79086 10 10 10C12.2091 10 14 8.20914 14 6C14 3.79086 12.2091 2 10 2ZM7 6C7 4.34315 8.34315 3 10 3C11.6569 3 13 4.34315 13 6C13 7.65685 11.6569 9 10 9C8.34315 9 7 7.65685 7 6ZM5.00873 11C3.90315 11 3 11.8869 3 13C3 14.6912 3.83281 15.9663 5.13499 16.7966C6.41697 17.614 8.14526 18 10 18C11.8547 18 13.583 17.614 14.865 16.7966C16.1672 15.9663 17 14.6912 17 13C17 11.8956 16.1045 11 15 11L5.00873 11ZM4 13C4 12.4467 4.44786 12 5.00873 12L15 12C15.5522 12 16 12.4478 16 13C16 14.3088 15.3777 15.2837 14.3274 15.9534C13.2568 16.636 11.7351 17 10 17C8.26489 17 6.74318 16.636 5.67262 15.9534C4.62226 15.2837 4 14.3088 4 13Z"
            fill={
              {
                "type": 2,
              }
            }
            propList={
              [
                "fill",
              ]
            }
          />
        </RNSVGGroup>
      </RNSVGSvgView>
    </View>
  </View>
</View>
`;

exports[`Avatar component tests Avatar square 1`] = `
<View
  accessibilityLabel=""
  accessibilityRole="image"
  accessible={true}
  icon={null}
  image={
    {
      "accessibilityLabel": "",
      "source": undefined,
    }
  }
  initials=""
  shape="square"
  style={
    {
      "alignItems": "center",
      "alignSelf": "flex-start",
      "aspectRatio": 1,
      "flexDirection": "row",
      "justifyContent": "center",
      "minHeight": 24,
      "minWidth": 24,
      "opacity": 1,
    }
  }
>
  <View
    accessible={false}
    style={
      {
        "alignItems": "center",
        "aspectRatio": 1,
        "backgroundColor": "#e6e6e6",
        "borderColor": "#d1d1d1",
        "borderRadius": 4,
        "borderWidth": 0,
        "justifyContent": "center",
        "minHeight": 24,
        "minWidth": 24,
      }
    }
  >
    <RNSVGSvgView
      align="xMidYMid"
      bbHeight={16}
      bbWidth={16}
      color="#616161"
      focusable={false}
      height={16}
      meetOrSlice={0}
      minX={0}
      minY={0}
      style={
        [
          {
            "backgroundColor": "transparent",
            "borderWidth": 0,
          },
          {
            "flex": 0,
            "height": 16,
            "width": 16,
          },
        ]
      }
      vbHeight={20}
      vbWidth={20}
      width={16}
    >
      <RNSVGGroup
        fill={
          {
            "payload": 4278190080,
            "type": 0,
          }
        }
      >
        <RNSVGPath
          d="M10 2C7.79086 2 6 3.79086 6 6C6 8.20914 7.79086 10 10 10C12.2091 10 14 8.20914 14 6C14 3.79086 12.2091 2 10 2ZM7 6C7 4.34315 8.34315 3 10 3C11.6569 3 13 4.34315 13 6C13 7.65685 11.6569 9 10 9C8.34315 9 7 7.65685 7 6ZM5.00873 11C3.90315 11 3 11.8869 3 13C3 14.6912 3.83281 15.9663 5.13499 16.7966C6.41697 17.614 8.14526 18 10 18C11.8547 18 13.583 17.614 14.865 16.7966C16.1672 15.9663 17 14.6912 17 13C17 11.8956 16.1045 11 15 11L5.00873 11ZM4 13C4 12.4467 4.44786 12 5.00873 12L15 12C15.5522 12 16 12.4478 16 13C16 14.3088 15.3777 15.2837 14.3274 15.9534C13.2568 16.636 11.7351 17 10 17C8.26489 17 6.74318 16.636 5.67262 15.9534C4.62226 15.2837 4 14.3088 4 13Z"
          fill={
            {
              "type": 2,
            }
          }
          propList={
            [
              "fill",
            ]
          }
        />
      </RNSVGGroup>
    </RNSVGSvgView>
  </View>
</View>
`;
